# c-markdown-compiler

./: .gitignore  CMakeLists.txt  main.c  util.h
reader/: reader_ctx.h
reader/string_reader/: string_reader.c  string_reader.h
tokenizer/: token.c  token.h  tokenizer.c  tokenizer.h
util/: utf8.c  utf8.h
